# drake-torch

./: .gitignore  Dockerfile  Jenkinsfile  Jenkinsfile-nightly.groovy  Jenkinsfile-stable.groovy  LICENSE  README.md  build.sh  build_drake_torch.sh  build_drake_torch_ros.sh  build_image.sh  build_test_dockers.sh  docker-compose.yml  docker_run_mac.sh  drake-torch-melodic.dockerfile  drake-torch-noetic.dockerfile  drake-torch-ros.dockerfile  drake-torch.dockerfile  publish__images.sh  publish_docker_images.sh  publish_image.sh  publish_images.sh  run_docker_tests.sh  test_image.sh  test_python.dockerfile
examples/drake-ompl/: .clang-format  CMakeLists.txt  README.md
examples/drake-ompl/cmake/modules/: FindGFlags.cmake
examples/drake-ompl/models/: box.sdf
examples/drake-ompl/src/: drake_ompl_demo.cc
in_container_scripts/: install-ompl-ubuntu.sh  mod_bashrc.sh  mod_bashrc_melodic.sh  mod_environment.sh  run_tests.sh  setup_pydrake.py  test.py  test_image.sh
scripts/: cartpole_entrypoint.sh  fix_bashrc.sh  install-ompl-ubuntu.sh  install_ompl_ubuntu_1.3.2.sh  install_ompl_ubuntu_1.4.2.sh  setup_pydrake.py  test_bashrc_ros_source_logic.sh
src/cmake/modules/: FindGFlags.cmake
src/examples/: README.md  mnist  test_cartpole.sh  test_mnist.sh  test_particles.sh  test_rl_cartpole.sh
src/examples/cart_pole/: CMakeLists.txt  cart_pole_passive_simulation.cc
src/examples/particles/: CMakeLists.txt
src/examples/rl_cartpole/: CMakeLists.txt  rl_cartpole.cc  rl_memory.h
src/sg/: .gitignore  CMakeLists.txt  setup.sh
src/sg/cmake/modules/: Findgflags.cmake
src/sg/examples/: DQN.h  acrobot_plant.h  drake_cartpole_env.cc  drake_cartpole_env.h  drake_simple_cartpole.cc  mnist.cc  rl_acrobot.cc  rl_acrobot_model.h  rl_cartpole.cc  rl_controller.h  simple_cartpole.cc
src/sg/scripts/: setup_env.sh
src/sg/utils/visdom/: visdom.cc  visdom.h
tests/: run_tests.sh  test_installation.py
